--- a/opnsense/update/Makefile
+++ b/opnsense/update/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	update
 PORTVERSION=	23.1.8
+PORTREVISION=	1
 CATEGORIES=	sysutils
 PKGNAMEPREFIX=	${GH_ACCOUNT}-
 
@@ -17,6 +18,6 @@ MAKE_ENV=	UPDATE_RELEASE=${PORTVERSION}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	${CATEGORIES:[1]}
-GH_TAGNAME=	fa3f372
+GH_TAGNAME=	113ec3e
 
 .include <bsd.port.mk>
