www/nginx: adjust NAXSI to new upstream

--- a/www/nginx/Makefile
+++ b/www/nginx/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	nginx
 PORTVERSION=	1.24.0
-PORTREVISION?=	6
+PORTREVISION?=	7
 PORTEPOCH=	3
 CATEGORIES=	www
 MASTER_SITES=	https://nginx.org/download/ \
@@ -266,6 +266,11 @@ pre-everything::
 .endif
 	@${ECHO_MSG}
 
+post-extract-NAXSI-on:
+	@${MKDIR} ${WRKDIR}/naxsi-${NAXSI_NGINX_VER}
+	@${MV} ${WRKDIR}/naxsi_rules ${WRKDIR}/naxsi_src \
+		${WRKDIR}/naxsi-${NAXSI_NGINX_VER}
+
 pre-patch-HTTPV3-on:
 	@${MV} ${WRKSRC}/README ${WRKSRC}/README.1st
 
@@ -306,6 +311,10 @@ post-patch-HTTP_ZIP-on:
 
 post-patch-ICONV-on:
 	@${REINPLACE_CMD} 's!%%PREFIX%%!${LOCALBASE}!g' ${WRKSRC_iconv}/config
+
+post-patch-NAXSI-on:
+	@${REINPLACE_CMD} 's!MSIZE!TOK_MSIZE!g' \
+		${WRKSRC_naxsi}/naxsi_src/libinjection/src/libinjection_sqli.c
 
 post-patch-PASSENGER-on:
 	@${REINPLACE_CMD} \
@@ -370,7 +379,7 @@ do-install-LINK-on:
 
 do-install-NAXSI-on:
 	${INSTALL_DATA} \
-	${WRKDIR}/naxsi-${NAXSI_NGINX_VER}/naxsi_config/naxsi_core.rules \
+	${WRKDIR}/naxsi-${NAXSI_NGINX_VER}/naxsi_rules/naxsi_core.rules \
 	${STAGEDIR}${ETCDIR}
 .endif
 
