--- a/textproc/py-markdown-it-py/Makefile
+++ b/textproc/py-markdown-it-py/Makefile
@@ -1,12 +1,13 @@
 PORTNAME=	markdown-it-py
-PORTVERSION=	2.2.0
+PORTVERSION=	3.0.0
 CATEGORIES=	textproc python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Python port of markdown-it
-WWW=		https://github.com/executablebooks/markdown-it-py
+WWW=		https://markdown-it-py.readthedocs.io/en/latest/ \
+		https://github.com/executablebooks/markdown-it-py
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
@@ -19,10 +20,4 @@ USE_PYTHON=	autoplist concurrent pep517
 
 NO_ARCH=	yes
 
-.include <bsd.port.pre.mk>
-
-.if ${PYTHON_REL} < 30800
-RUN_DEPENDS+=	${PYTHON_PKGNAMEPREFIX}typing-extensions>=3.7.4:devel/py-typing-extensions@${PY_FLAVOR}
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
