--- a/security/suricata/Makefile
+++ b/security/suricata/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	suricata
 DISTVERSION=	6.0.13
+PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	https://www.openinfosecfoundation.org/download/
 
@@ -78,7 +79,7 @@ LUAJIT_CONFIGURE_ON=	--enable-luajit
 LUA_USES=		lua:51
 LUA_CONFIGURE_ON=	--enable-lua
 
-NETMAP_CONFIGURE_ENABLE=	netmap # netmap-v14
+NETMAP_CONFIGURE_ENABLE=	netmap netmap-v14
 
 NSS_LIB_DEPENDS=	libnspr4.so:devel/nspr \
 			libnss3.so:security/nss
