opnsense/suricata: update to final 7.0.0

--- a/opnsense/suricata/Makefile
+++ b/opnsense/suricata/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	suricata
 PKGNAMESUFFIX=	-devel
-DISTVERSION=	7.0.0-rc2
+DISTVERSION=	7.0.0
 CATEGORIES=	security
 MASTER_SITES=	https://www.openinfosecfoundation.org/download/
 
