opnsense/udate: final update to 23.7 (no code changes)

--- a/opnsense/update/Makefile
+++ b/opnsense/update/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	update
-PORTVERSION=	23.7.r1
+PORTVERSION=	23.7
 CATEGORIES=	sysutils
 PKGNAMEPREFIX=	${GH_ACCOUNT}-
 
@@ -17,6 +17,6 @@ MAKE_ENV=	UPDATE_RELEASE=${PORTVERSION}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	${CATEGORIES:[1]}
-GH_TAGNAME=	f731208
+#GH_TAGNAME=	f731208
 
 .include <bsd.port.mk>
