--- a/net/ntopng/files/pkg-message.in
+++ b/net/ntopng/files/pkg-message.in
@@ -10,7 +10,8 @@ remote one.
 
 ntopng supports IP geolocation, to enable this you should use the
 ntopng-geoip2update.sh script to update the maxminddb geolocation
-data to the latest version.
+data to the latest version. This script requires a maxmind.com
+account API key configured in %%LOCALBASE%%/etc/GeoIP.conf to work.
 
 To pass a configuration file to ntopng, which overrides any command
 line arguments, add something like the following to rc.conf:
