benchmarks/stress-ng: sync with upstream
Taken from: FreeBSD

--- a/benchmarks/stress-ng/Makefile
+++ b/benchmarks/stress-ng/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	stress-ng
 DISTVERSIONPREFIX=	V
 DISTVERSION=	0.16.02
+PORTREVISION=	1
 CATEGORIES=	benchmarks
 
 MAINTAINER=	pizzamig@FreeBSD.org
