net/py-urllib3: sync with upstream
Taken from: FreeBSD

--- a/net/py-urllib3/Makefile
+++ b/net/py-urllib3/Makefile
@@ -42,7 +42,7 @@ SOCKS_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pysocks>=1.5.6<2.0:net/py-pysocks@${PY
 SSL_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}certifi>=0:security/py-certifi@${PY_FLAVOR} \
 			${PYTHON_PKGNAMEPREFIX}idna>=2.0.0:dns/py-idna@${PY_FLAVOR} \
 			${PYTHON_PKGNAMEPREFIX}openssl>=0.14:security/py-openssl@${PY_FLAVOR}
-SSL_USES=		pycryptography:build,test,run
+SSL_USES=		pycryptography:run,test
 SSL_USES_OFF=		pycryptography:test
 
 .include <bsd.port.mk>
