security/py-oauthlib: sync with upstream
Taken from: FreeBSD

--- a/security/py-oauthlib/Makefile
+++ b/security/py-oauthlib/Makefile
@@ -11,11 +11,10 @@ WWW=		https://github.com/oauthlib/oauthlib
 LICENSE=	BSD3CLAUSE
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest>=4.0:devel/py-pytest@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}pytest-cov>=2.6:devel/py-pytest-cov@${PY_FLAVOR}
+TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest-cov>=2.6:devel/py-pytest-cov@${PY_FLAVOR}
 
 USES=		python
-USE_PYTHON=	autoplist concurrent distutils
+USE_PYTHON=	autoplist concurrent distutils pytest
 
 NO_ARCH=	yes
 
@@ -27,10 +26,7 @@ SIGNEDTOKEN_DESC=	Signed token support
 
 RSA_USES=			pycryptography:run
 SIGNALS_RUN_DEPENDS=		${PYTHON_PKGNAMEPREFIX}blinker>=1.4.0:devel/py-blinker@${PY_FLAVOR}
-SIGNEDTOKEN_USES=		pycryptography:run
 SIGNEDTOKEN_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyjwt>=2.0.0<3:www/py-pyjwt@${PY_FLAVOR}
-
-do-test:
-	cd ${WRKSRC} && ${PYTHON_CMD} -m pytest -rs -v
+SIGNEDTOKEN_USES=		pycryptography:run
 
 .include <bsd.port.mk>
