lang/php80: sync with upstream
Taken from: FreeBSD

--- a/lang/php80/Makefile
+++ b/lang/php80/Makefile
@@ -102,7 +102,7 @@ WARNING=	"!!! If you have a threaded Apache, you must build ${PHP_PORT} with ZTS
 .include <bsd.port.options.mk>
 
 .if ( ${OPSYS} == FreeBSD && ${OSVERSION} >= 1400092 && ${SSL_DEFAULT} == base ) || ${SSL_DEFAULT:Mopenssl3*}
-CXXFLAGS+=	-DOPENSSL_API_COMPAT=0x30000000L"
+CXXFLAGS+=	-DOPENSSL_API_COMPAT=0x30000000L
 .endif
 
 .include <bsd.port.pre.mk>
