--- a/www/p5-Mozilla-CA/Makefile
+++ b/www/p5-Mozilla-CA/Makefile
@@ -1,18 +1,21 @@
 PORTNAME=	Mozilla-CA
-PORTVERSION=	20221114
+DISTVERSIONPREFIX=	v
+DISTVERSION=	20230801
 CATEGORIES=	www perl5
-MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	svysh.fbsd@gmail.com
 COMMENT=	Perl extension for Mozilla CA cert bundle in PEM format
-WWW=		https://metacpan.org/release/Mozilla-CA
+WWW=		https://github.com/libwww-perl/Mozilla-CA
 
 LICENSE=	MPL20
 LICENSE_FILE=	${WRKSRC}/README
 
 USES=		perl5
+USE_GITHUB=	yes
+GH_ACCOUNT=	libwww-perl
 USE_PERL5=	configure
+
 NO_ARCH=	yes
 
 .include <bsd.port.mk>
