--- a/opnsense/update/Makefile
+++ b/opnsense/update/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	update
-PORTVERSION=	23.7
+PORTVERSION=	23.7.1
 CATEGORIES=	sysutils
 PKGNAMEPREFIX=	${GH_ACCOUNT}-
 
@@ -17,6 +17,6 @@ MAKE_ENV=	UPDATE_RELEASE=${PORTVERSION}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	${CATEGORIES:[1]}
-#GH_TAGNAME=	f731208
+GH_TAGNAME=	23.7
 
 .include <bsd.port.mk>
