www/p5-Mozilla-CA: sync with upstream
Taken from: FreeBSD

--- a/www/p5-Mozilla-CA/Makefile
+++ b/www/p5-Mozilla-CA/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	Mozilla-CA
-DISTVERSIONPREFIX=	v
-DISTVERSION=	20230801
+DISTVERSION=	20230807
 CATEGORIES=	www perl5
+MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	svysh.fbsd@gmail.com
@@ -12,8 +12,6 @@ LICENSE=	MPL20
 LICENSE_FILE=	${WRKSRC}/README
 
 USES=		perl5
-USE_GITHUB=	yes
-GH_ACCOUNT=	libwww-perl
 USE_PERL5=	configure
 
 NO_ARCH=	yes
