--- a/www/py-pyjwt/Makefile
+++ b/www/py-pyjwt/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	pyjwt
-PORTVERSION=	2.7.0
-PORTREVISION=	1
+PORTVERSION=	2.8.0
 CATEGORIES=	www python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -8,12 +7,13 @@ DISTNAME=	PyJWT-${PORTVERSION}
 
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	JSON Web Token implementation in Python
-WWW=		https://github.com/jpadilla/pyjwt
+WWW=		https://pyjwt.readthedocs.io/en/stable/ \
+		https://github.com/jpadilla/pyjwt
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-BUILD_DEPENDS=	${PY_SETUPTOOLS} \
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
 
 USES=		cpe python
