--- a/math/py-numpy/Makefile
+++ b/math/py-numpy/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	numpy
 PORTVERSION=	1.25.0
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	math python
 MASTER_SITES=	PYPI \
@@ -21,36 +22,29 @@ LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pytest>=6.2.5:devel/py-pytest@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}hypothesis>=6.24.1:devel/py-hypothesis@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}typing-extensions>=4.2.0:devel/py-typing-extensions@${PY_FLAVOR}
-USES=		compiler:c11 cpe python:3.9-3.11
+USES=		compiler:c11 cpe fortran python:3.9-3.11
 USE_PYTHON=	allflavors autoplist concurrent cython distutils
 
 GCCLIBDIR_CMDS=	${FC} -print-file-name=libgfortran.so | ${SED} -e s/libgfortran.so//
 LDFLAGS+=	-s
-PYDISTUTILS_BUILDARGS=		${PYFARGS}
-PYDISTUTILS_CONFIGUREARGS=	${PYFARGS}
+PYDISTUTILS_BUILDARGS=		--fcompiler=gnu95
+PYDISTUTILS_CONFIGUREARGS=	--fcompiler=gnu95
 
 PORTDOCS=	*
 
-OPTIONS_DEFINE=		DOCS FORTRAN SUITESPARSE
+OPTIONS_DEFINE=		DOCS SUITESPARSE
 OPTIONS_SINGLE=		BLASLIB
-OPTIONS_SINGLE_BLASLIB=	ATLAS NETLIB NOBLAS OPENBLAS
-OPTIONS_DEFAULT=	FORTRAN OPENBLAS SUITESPARSE
+OPTIONS_SINGLE_BLASLIB=	ATLAS NETLIB OPENBLAS
+OPTIONS_DEFAULT=	OPENBLAS SUITESPARSE
 SUITESPARSE_DESC=	Use AMD and UMFPACK in SuiteSparse
 
-ATLAS_IMPLIES=		FORTRAN
 ATLAS_USES=		blaslapack:atlas
 ATLAS_VARS=		BLASLIBS="ptf77blas, ptcblas" BLASNAME=atlas LAPACKLIBS=alapack LIBRARIES=atlas_libs
-FORTRAN_USES=		fortran
-FORTRAN_VARS=		PYFARGS=--fcompiler=gnu95
-NETLIB_IMPLIES=		FORTRAN
 NETLIB_USES=		blaslapack:netlib
 NETLIB_VARS=		BLASLIBS="blas, cblas" BLASNAME=atlas LAPACKLIBS=lapack LIBRARIES=atlas_libs
 NETLIB_LIB_DEPENDS=	libcblas.so:math/cblas
-NOBLAS_MAKE_ENV=	NPY_BLAS_ORDER= NPY_LAPACK_ORDER=
-OPENBLAS_IMPLIES=	FORTRAN
 OPENBLAS_USES=		blaslapack:openblas
 OPENBLAS_VARS=		BLASLIBS="openblas, gfortran" BLASNAME=openblas LAPACKLIBS="openblas, gfortran" LIBRARIES=libraries
-SUITESPARSE_IMPLIES=	FORTRAN
 SUITESPARSE_LIB_DEPENDS=libumfpack.so:math/suitesparse-umfpack
 
 post-extract:
@@ -58,21 +52,17 @@ post-extract:
 	@${TOUCH} ${WRKSRC}/numpy/random/_examples/temp
 	@${TOUCH} ${WRKSRC}/numpy/core/tests/examples/temp
 
-pre-configure-FORTRAN-on:
-	@${REINPLACE_CMD} -e "s|%%GCCLIBDIR%%|$$(${GCCLIBDIR_CMDS})|" ${WRKSRC}/site.cfg ${WRKSRC}/numpy/distutils/system_info.py
-
-pre-configure-NOBLAS-off:
-	@${REINPLACE_CMD} -e 's|%%LOCALBASE%%|${LOCALBASE}|g' \
-		-e 's|%%BLASLIBS%%|${BLASLIBS}|; s|%%BLASNAME%%|${BLASNAME}|' \
-		-e 's|%%LAPACKLIBS%%|${LAPACKLIBS}|; s|%%LIBRARIES%%|${LIBRARIES}|' \
-			${WRKSRC}/site.cfg
-
 pre-configure-SUITESPARSE-off:
 	@${REINPLACE_CMD} -e 's|:%%LOCALBASE%%/include/suitesparse||' ${WRKSRC}/site.cfg
 
 pre-configure:
 	@${REINPLACE_CMD} -e 's|%%FC%%|${FC}|' ${WRKSRC}/numpy/distutils/fcompiler/gnu.py
 	@${CP} ${FILESDIR}/site.cfg ${WRKSRC}/site.cfg
+	${REINPLACE_CMD} -e 's|%%LOCALBASE%%|${LOCALBASE}|g' \
+		-e 's|%%BLASLIBS%%|${BLASLIBS}|; s|%%BLASNAME%%|${BLASNAME}|' \
+		-e 's|%%LAPACKLIBS%%|${LAPACKLIBS}|; s|%%LIBRARIES%%|${LIBRARIES}|' \
+			${WRKSRC}/site.cfg
+	@${REINPLACE_CMD} -e "s|%%GCCLIBDIR%%|$$(${GCCLIBDIR_CMDS})|" ${WRKSRC}/site.cfg ${WRKSRC}/numpy/distutils/system_info.py
 
 do-configure:
 
