--- a/opnsense/update/Makefile
+++ b/opnsense/update/Makefile
@@ -17,6 +17,6 @@ MAKE_ENV=	UPDATE_RELEASE=${PORTVERSION}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	${CATEGORIES:[1]}
-GH_TAGNAME=	23.7
+GH_TAGNAME=	d530c45
 
 .include <bsd.port.mk>
