opnsense/dhcrelay: register conflicts

--- a/net/isc-dhcp44-server/Makefile
+++ b/net/isc-dhcp44-server/Makefile
@@ -44,7 +44,7 @@ BINLEASES_DESC=		Enable support for binary insertion of leases
 CONFLICTS=	isc-dhcp3?-client-[0-9]* isc-dhcp4[123]-client-[0-9]*
 DHCP_PORTREVISION=	${PORTREVISION_CLIENT}
 .elif ${SUBSYS} == relay
-CONFLICTS=	isc-dhcp3?-relay isc-dhcp4[123]-relay
+CONFLICTS=	isc-dhcp3?-relay isc-dhcp4[123]-relay dhcrelay
 DHCP_PORTREVISION=	${PORTREVISION_RELAY}
 .else
 CONFLICTS=	isc-dhcp3?-server isc-dhcp4[123]-server
