opnsense: update urls

--- a/opnsense/dhcp6c/Makefile
+++ b/opnsense/dhcp6c/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	net
 
 MAINTAINER=	franco@opnsense.org
 COMMENT=	OPNsense WIDE-DHCPv6 client
-WWW=		https://github.com/opnsense/dhcp6c/
+WWW=		https://github.com/opnsense/dhcp6c
 
 LICENSE=	BSD3CLAUSE
 LICENSE_FILE=	${WRKSRC}/COPYRIGHT
