--- a/opnsense/update/Makefile
+++ b/opnsense/update/Makefile
@@ -6,7 +6,7 @@ PKGNAMEPREFIX=	${GH_ACCOUNT}-
 
 MAINTAINER=	franco@opnsense.org
 COMMENT=	OPNsense update utilities
-WWW=		https://opnsense.org/
+WWW=		https://github.com/opnsense/update
 
 LICENSE=	BSD2CLAUSE
 
