sysutils/pftop: revert older version support
Something in here may have modified the way FreeBSD 13's port works.

--- a/sysutils/pftop/Makefile
+++ b/sysutils/pftop/Makefile
@@ -12,6 +12,7 @@ LIB_DEPENDS=	libpfctl.so:net/libpfctl
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	grembo
+GH_TAGNAME=	4f965c5
 
 CFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib -lpfctl
@@ -24,7 +25,14 @@ ALTQ_DESC=	ALTQ support for queue statistics
 
 MAKE_ARGS=	LOCALBASE="${PREFIX}"
 
-CFLAGS+=	-DHAVE_SNPRINTF=1 -DHAVE_VSNPRINTF=1
+CFLAGS+=	-DHAVE_SNPRINTF=1 -DHAVE_VSNPRINTF=1 \
+		-DHAVE_FINE_GRAINED_LOCKING=1
+
+.if ${OPSYS} == FreeBSD && ${OSVERSION} >= 1400090
+MAKE_ARGS+=	OSLEVEL=46
+.else
+MAKE_ARGS+=	OSLEVEL=45
+.endif
 
 .if ${PORT_OPTIONS:MALTQ}
 CFLAGS+=	-DHAVE_ALTQ=1
