Framework: sync with upstream
Taken from: FreeBSD

--- a/Templates/BSD.local.dist
+++ b/Templates/BSD.local.dist
@@ -653,6 +653,19 @@
             ..
         ..
         man
+            cat1
+            ..
+            cat5
+            ..
+            cat7
+            ..
+            cat8
+            ..
+            ja              uname=root
+/set uname=root
+                man1
+                ..
+            ..
             man1
             ..
             man2
@@ -672,6 +685,8 @@
             man9
             ..
             manl
+            ..
+            mann
             ..
         ..
         misc
