Framework: sync with upstream
Taken from: FreeBSD

--- a/Templates/BSD.local.dist
+++ b/Templates/BSD.local.dist
@@ -665,6 +665,8 @@
 /set uname=root
                 man7
                 ..
+                man8
+                ..
             ..
             ja              uname=root
 /set uname=root
