Framework: sync with upstream
Taken from: FreeBSD

--- a/Templates/BSD.local.dist
+++ b/Templates/BSD.local.dist
@@ -682,6 +682,10 @@
                 man7
                 ..
             ..
+            it
+                man7
+                ..
+            ..
             ja              uname=root
 /set uname=root
                 man1
