sysutils/pftop: sync with upstream
Taken from: FreeBSD

--- a/sysutils/pftop/Makefile
+++ b/sysutils/pftop/Makefile
@@ -21,7 +21,7 @@ ALTQ_DESC=	ALTQ support for queue statistics
 
 .include <bsd.port.options.mk>
 
-MAKE_ARGS=	LOCALBASE="${PREFIX}"
+MAKE_ARGS=	LOCALBASE="${PREFIX}" MANDIR=${PREFIX}/share/man/man
 
 CFLAGS+=	-DHAVE_SNPRINTF=1 -DHAVE_VSNPRINTF=1
 
