*/*: sync with upstream
Taken from: FreeBSD

--- a/security/Makefile
+++ b/security/Makefile
@@ -983,6 +983,7 @@
     SUBDIR += py-pgpdump
     SUBDIR += py-pgpy
     SUBDIR += py-plaso
+    SUBDIR += py-pnu-certwatch
     SUBDIR += py-pnu-vuxml
     SUBDIR += py-potr
     SUBDIR += py-pwntools
