Tether caddy_custom build version to caddy_version, to prevent xcaddy pulling latest caddy version before the tracked distversion www/caddy has been upgraded.

--- a/www/caddy-custom/Makefile
+++ b/www/caddy-custom/Makefile
@@ -27,8 +27,9 @@ SUB_FILES=	caddy
 
 PLIST_FILES=	bin/caddy
 
-CADDY_VERSION!=	${MAKE} -C ${.CURDIR}/../caddy  -V '$${DISTVERSION}.$${PORTREVISION}'
-XCADDY_VERSION!=${MAKE} -C ${.CURDIR}/../xcaddy -V '$${DISTVERSION}.$${PORTREVISION}'
+CADDY_BUILD!=	${MAKE} -C ${.CURDIR}/../caddy  -v '$${DISTVERSIONPREFIX}$${DISTVERSION}'
+CADDY_VERSION!=	${MAKE} -C ${.CURDIR}/../caddy  -v '$${DISTVERSION}.$${PORTREVISION}'
+XCADDY_VERSION!=${MAKE} -C ${.CURDIR}/../xcaddy -v '$${DISTVERSION}.$${PORTREVISION}'
 
 .for plugin in ${CADDY_CUSTOM_PLUGINS}
 PLUGINS+=	--with ${plugin}
@@ -41,7 +42,7 @@ XCADDY_ENV+=	XCADDY_WHICH_GO="${GO_CMD}" \
 
 do-build:
 	${MKDIR} ${WRKSRC}
-	cd ${WRKSRC} && ${XCADDY_ENV} ${LOCALBASE}/bin/xcaddy build ${PLUGINS}
+	cd ${WRKSRC} && ${XCADDY_ENV} ${LOCALBASE}/bin/xcaddy build ${CADDY_BUILD} ${PLUGINS}
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/caddy ${STAGEDIR}${PREFIX}/bin
