opnsense/update: support both 24.1 amd 24.7

--- a/opnsense/update/Makefile
+++ b/opnsense/update/Makefile
@@ -1,5 +1,9 @@
 PORTNAME=	update
+.if "${PRODUCT_ABI}" != "24.7"
 PORTVERSION=	24.1.8
+.else
+PORTVERSION=	24.7.b
+.endif
 CATEGORIES=	sysutils
 PKGNAMEPREFIX=	${GH_ACCOUNT}-
 
