opnsense/update: update 24.7 to RC1

--- a/opnsense/update/Makefile
+++ b/opnsense/update/Makefile
@@ -2,7 +2,7 @@ PORTNAME=	update
 .if "${PRODUCT_ABI}" != "24.7"
 PORTVERSION=	24.1.8
 .else
-PORTVERSION=	24.7.b
+PORTVERSION=	24.7.r1
 .endif
 CATEGORIES=	sysutils
 PKGNAMEPREFIX=	${GH_ACCOUNT}-
