opnsense/update: minor bootstrap improvements and safety belts
We now embed the valid FreeBSD version from the build process and the
build will complain if it can't get any of those values it needs.

OTOH, the plain script that can be downloaded from GitHub will now
simply ignore the FreeBSD version check as that creates issues sometimes.
In a sense it is more dangerous now but fully outside our ecosystem and
immediate reach.

--- a/opnsense/update/Makefile
+++ b/opnsense/update/Makefile
@@ -1,9 +1,6 @@
 PORTNAME=	update
-.if "${PRODUCT_ABI}" != "24.7"
-PORTVERSION=	24.1.8
-.else
 PORTVERSION=	24.7
-.endif
+PORTREVISION=	1
 CATEGORIES=	sysutils
 PKGNAMEPREFIX=	${GH_ACCOUNT}-
 
@@ -17,12 +14,10 @@ LIB_DEPENDS+=	libucl.so:textproc/libucl
 
 USES=		ssl
 
-MAKE_ENV=	UPDATE_RELEASE=${PORTVERSION}
+MAKE_ENV=	UPDATE_RELEASE=${PORTVERSION} UPDATE_FREEBSD=${OSREL}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	${CATEGORIES:[1]}
-.if "${PRODUCT_ABI}" != "24.7"
-GH_TAGNAME=	f2a6831
-.endif
+GH_TAGNAME=	f272a1c
 
 .include <bsd.port.mk>
