*/*: sync with upstream
Taken from: FreeBSD

--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -68,6 +68,7 @@
     SUBDIR += liblzxcomp
     SUBDIR += libmspack
     SUBDIR += libpar2
+    SUBDIR += libszip
     SUBDIR += libunrar
     SUBDIR += libzip
     SUBDIR += libzippp
