--- a/net-p2p/qbittorrent/Makefile
+++ b/net-p2p/qbittorrent/Makefile
@@ -69,7 +69,9 @@ PYTHON_USES=		python:run
 .include <bsd.port.options.mk>
 
 .if ${OPSYS} == FreeBSD && ${OSVERSION} < 1400000
-LIB_DEPENDS=	libcrypto.so:security/openssl
+#LIB_DEPENDS+=	libcrypto.so:security/openssl # LIB_DEPENDS doesn't work here (after bsd.port.options.mk)
+BUILD_DEPENDS+=	openssl>0:security/openssl
+RUN_DEPENDS+=	openssl>0:security/openssl
 CMAKE_ARGS=	-DOPENSSL_ROOT_DIR=${LOCALBASE}
 .endif
 
