--- a/devel/wasmer/Makefile.crates
+++ b/devel/wasmer/Makefile.crates
@@ -28,8 +28,6 @@ CARGO_CRATES=	addr2line-0.22.0 \
 		atomic-polyfill-1.0.3 \
 		autocfg-1.3.0 \
 		backtrace-0.3.73 \
-		base64-0.13.1 \
-		base64-0.21.7 \
 		base64-0.22.1 \
 		beef-0.5.2 \
 		bincode-1.3.3 \
@@ -151,7 +149,6 @@ CARGO_CRATES=	addr2line-0.22.0 \
 		dynasm-1.2.3 \
 		dynasmrt-1.2.3 \
 		edge-schema-0.0.3 \
-		edge-schema-0.1.0 \
 		edge-util-0.1.0 \
 		educe-0.4.23 \
 		either-1.13.0 \
@@ -290,6 +287,8 @@ CARGO_CRATES=	addr2line-0.22.0 \
 		logos-0.14.0 \
 		logos-codegen-0.14.0 \
 		logos-derive-0.14.0 \
+		loupe-0.1.3 \
+		loupe-derive-0.1.3 \
 		lz4_flex-0.11.3 \
 		lzma-rs-0.2.0 \
 		mac_address-1.1.7 \
@@ -311,7 +310,7 @@ CARGO_CRATES=	addr2line-0.22.0 \
 		minisign-0.7.6 \
 		miniz_oxide-0.7.4 \
 		mio-0.6.23 \
-		mio-0.8.11 \
+		mio-1.0.1 \
 		mio-uds-0.6.8 \
 		miow-0.2.2 \
 		miow-0.3.7 \
@@ -465,7 +464,7 @@ CARGO_CRATES=	addr2line-0.22.0 \
 		serde_cbor-0.11.2 \
 		serde_derive-1.0.204 \
 		serde_derive_internals-0.29.1 \
-		serde_json-1.0.120 \
+		serde_json-1.0.128 \
 		serde_path_to_error-0.1.16 \
 		serde_spanned-0.6.6 \
 		serde_urlencoded-0.7.1 \
@@ -487,7 +486,6 @@ CARGO_CRATES=	addr2line-0.22.0 \
 		smallvec-0.6.14 \
 		smallvec-1.13.2 \
 		smoltcp-0.8.2 \
-		socket2-0.4.10 \
 		socket2-0.5.7 \
 		sparx-0.1.2 \
 		spin-0.9.8 \
@@ -505,7 +503,7 @@ CARGO_CRATES=	addr2line-0.22.0 \
 		tar-0.4.41 \
 		target-lexicon-0.11.2 \
 		target-lexicon-0.12.15 \
-		tempfile-3.10.1 \
+		tempfile-3.12.0 \
 		term-0.7.0 \
 		termcolor-1.4.1 \
 		terminal_size-0.3.0 \
@@ -527,14 +525,14 @@ CARGO_CRATES=	addr2line-0.22.0 \
 		tinyvec_macros-0.1.1 \
 		tldextract-0.6.0 \
 		tokio-0.1.22 \
-		tokio-1.38.1 \
+		tokio-1.39.2 \
 		tokio-codec-0.1.2 \
 		tokio-core-0.1.18 \
 		tokio-current-thread-0.1.7 \
 		tokio-executor-0.1.10 \
 		tokio-fs-0.1.7 \
 		tokio-io-0.1.13 \
-		tokio-macros-2.3.0 \
+		tokio-macros-2.4.0 \
 		tokio-native-tls-0.3.1 \
 		tokio-reactor-0.1.12 \
 		tokio-rustls-0.25.0 \
@@ -644,7 +642,7 @@ CARGO_CRATES=	addr2line-0.22.0 \
 		wcgi-host-0.1.2 \
 		wcgi-host-0.2.0 \
 		web-sys-0.3.69 \
-		webc-6.0.0 \
+		webc-6.1.0 \
 		webpki-roots-0.26.3 \
 		weezl-0.1.8 \
 		whoami-1.5.1 \
